Final Boss Test 1 - upload to Github and CDN into GHL

--- a/gh-index.html
+++ b/gh-index.html
@@ -1,7 +1,7 @@
-</html><!DOCTYPE html>
+<!-- </html><!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> -->
   <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,9 +35,26 @@
     href="https://cdn.jsdelivr.net/gh/inspectaTech/allthingsvondre@main/creative-piling/css/pagepiling.css">
   <link href="https://cdn.jsdelivr.net/gh/inspectaTech/allthingsvondre@main/creative-piling/css/style.css"
     rel="stylesheet">
-</head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="90">
+  <style>
+    /* used to modify GHL chrome elements */
+    .fullSection {
+      padding-top: 0px !important;
+    }
+  
+    .fullSection .c-wrapper {
+      padding-top: 0px;
+    }
+  
+    .inner {
+      max-width: unset !important;
+    }
+  </style>
+
+
+<!-- </head>
+
+<body data-spy="scroll" data-target=".navbar" data-offset="90"> -->
 
   <!-- START LOADER -->
   <div class="loader" id="loader-fade">
@@ -1060,7 +1077,7 @@
     src="https://cdn.jsdelivr.net/gh/inspectaTech/allthingsvondre@main/creative-piling/js/swiper-thumbnail.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/inspectaTech/allthingsvondre@main/vendor/js/contact_us.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/inspectaTech/allthingsvondre@main/creative-piling/js/script.js"></script>
-
+<!-- 
 </body>
 
-</html>
+</html> -->
