--- a/vite-index.html
+++ b/vite-index.html
@@ -93,7 +93,7 @@
   </header>
   <!-- END HEADER -->
 
-  <div id="pagepiling">
+  <div id="pagepiling" class="pagepiling">
 
     <!-- START SLIDER -->
     <section class="section slider" id="page1">
@@ -151,7 +151,7 @@
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none"
                 data-splitout="none"
                 style="z-index:2; font-weight: 700; letter-spacing: 1px; color: #ffffff; font-family: 'Poppins', sans-serif;text-transform:capitalize">
-                digital business
+               {{title}} 1
               </div>
               <div class="tp-caption tp-resizeme rs-parallaxlevel-5" data-x="['center','center','center','center']"
                 data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']"
@@ -164,7 +164,7 @@
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none"
                 data-splitout="none"
                 style="z-index:2; font-weight: 700; letter-spacing: 1px; color: #ffffff; font-family: 'Poppins', sans-serif;text-transform:capitalize">
-                digital business
+               {{title}} 2
               </div>
               <div class="tp-caption tp-resizeme rs-parallaxlevel-5" data-x="['center','center','center','center']"
                 data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']"
@@ -274,7 +274,7 @@
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none"
                 data-splitout="none"
                 style="z-index:2; font-weight: 700; letter-spacing: 1px; color: #ffffff; font-family: 'Poppins', sans-serif;text-transform:capitalize">
-                digital business
+               {{title}} 3
               </div>
               <div class="tp-caption tp-resizeme rs-parallaxlevel-5" data-x="['center','center','center','center']"
                 data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']"
@@ -287,7 +287,7 @@
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none"
                 data-splitout="none"
                 style="z-index:2; font-weight: 700; letter-spacing: 1px; color: #ffffff; font-family: 'Poppins', sans-serif;text-transform:capitalize">
-                digital business
+               {{title}} 4
               </div>
               <div class="tp-caption tp-resizeme rs-parallaxlevel-5" data-x="['center','center','center','center']"
                 data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']"
@@ -399,7 +399,7 @@
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none"
                 data-splitout="none"
                 style="z-index:2; font-weight: 700; letter-spacing: 1px; color: #ffffff; font-family: 'Poppins', sans-serif;text-transform:capitalize">
-                digital business
+               {{title}} 5
               </div>
               <div class="tp-caption tp-resizeme rs-parallaxlevel-5" data-x="['center','center','center','center']"
                 data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']"
@@ -412,7 +412,7 @@
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none"
                 data-splitout="none"
                 style="z-index:2; font-weight: 700; letter-spacing: 1px; color: #ffffff; font-family: 'Poppins', sans-serif;text-transform:capitalize">
-                digital business
+               {{title}} 6
               </div>
 
               <div class="tp-caption tp-resizeme rs-parallaxlevel-5" data-x="['center','center','center','center']"
