--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body data-spy="scroll" data-target=".navbar" data-offset="90">
     <div id="root" class="root"></div>
     <div class="deferMe"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx?v=1"></script>
   </body>
 </html>
